@@ -10,6 +10,7 @@ import com.quorum.tessera.encryption.EncryptorException;
 import com.quorum.tessera.encryption.Nonce;
 import com.quorum.tessera.encryption.PublicKey;
 import com.quorum.tessera.transaction.*;
+import com.quorum.tessera.transaction.exception.MandatoryRecipientsNotAvailableException;
 import com.quorum.tessera.transaction.exception.PrivacyViolationException;
 import com.quorum.tessera.transaction.exception.RecipientKeyNotFoundException;
 import com.quorum.tessera.transaction.exception.TransactionNotFoundException;
@@ -25,8 +26,6 @@ import org.mockito.ArgumentCaptor;
 public class TransactionManagerTest {
 
   private TransactionManager transactionManager;
-
-  private PayloadEncoder payloadEncoder;
 
   private EncryptedTransactionDAO encryptedTransactionDAO;
 
@@ -44,23 +43,21 @@ public class TransactionManagerTest {
 
   @Before
   public void onSetUp() {
-    payloadEncoder = mock(PayloadEncoder.class);
     enclave = mock(Enclave.class);
     encryptedTransactionDAO = mock(EncryptedTransactionDAO.class);
     encryptedRawTransactionDAO = mock(EncryptedRawTransactionDAO.class);
     resendManager = mock(ResendManager.class);
-    privacyHelper = new PrivacyHelperImpl(encryptedTransactionDAO, true, payloadEncoder);
+    privacyHelper = new PrivacyHelperImpl(encryptedTransactionDAO, true);
     batchPayloadPublisher = mock(BatchPayloadPublisher.class);
     mockDigest = cipherText -> cipherText;
 
     transactionManager =
         new TransactionManagerImpl(
-            payloadEncoder,
-            encryptedTransactionDAO,
-            batchPayloadPublisher,
             enclave,
+            encryptedTransactionDAO,
             encryptedRawTransactionDAO,
             resendManager,
+            batchPayloadPublisher,
             privacyHelper,
             mockDigest);
   }
@@ -68,13 +65,13 @@ public class TransactionManagerTest {
   @After
   public void onTearDown() {
     verifyNoMoreInteractions(enclave, resendManager, batchPayloadPublisher);
-    verifyNoMoreInteractions(payloadEncoder, encryptedTransactionDAO);
+    verifyNoMoreInteractions(encryptedTransactionDAO);
   }
 
   @Test
   public void send() {
-    EncodedPayload encodedPayload = mock(EncodedPayload.class);
 
+    EncodedPayload encodedPayload = mock(EncodedPayload.class);
     when(encodedPayload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
 
     when(enclave.encryptPayload(any(), any(), any(), any())).thenReturn(encodedPayload);
@@ -99,10 +96,51 @@ public class TransactionManagerTest {
     assertThat(result.getManagedParties()).containsExactly(receiver);
 
     verify(enclave).encryptPayload(any(), any(), any(), any());
-    verify(payloadEncoder).encode(encodedPayload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(enclave).getForwardingKeys();
     verify(enclave).getPublicKeys();
+  }
+
+  @Test
+  public void sendWithMandatoryRecipients() {
+    EncodedPayload encodedPayload = mock(EncodedPayload.class);
+
+    when(encodedPayload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
+
+    when(enclave.encryptPayload(any(), any(), any(), any())).thenReturn(encodedPayload);
+
+    PublicKey sender = PublicKey.from("SENDER".getBytes());
+    PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
+
+    when(enclave.getPublicKeys()).thenReturn(Set.of(receiver));
+
+    byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
+
+    SendRequest sendRequest = mock(SendRequest.class);
+    when(sendRequest.getPayload()).thenReturn(payload);
+    when(sendRequest.getSender()).thenReturn(sender);
+    when(sendRequest.getRecipients()).thenReturn(List.of(receiver));
+    when(sendRequest.getPrivacyMode()).thenReturn(PrivacyMode.MANDATORY_RECIPIENTS);
+    when(sendRequest.getMandatoryRecipients()).thenReturn(Set.of(receiver));
+
+    ArgumentCaptor<PrivacyMetadata> metadataArgCaptor =
+        ArgumentCaptor.forClass(PrivacyMetadata.class);
+
+    SendResponse result = transactionManager.send(sendRequest);
+
+    assertThat(result).isNotNull();
+    assertThat(result.getTransactionHash().toString()).isEqualTo("Q0lQSEVSVEVYVA==");
+    assertThat(result.getManagedParties()).containsExactly(receiver);
+
+    verify(enclave).encryptPayload(any(), any(), any(), metadataArgCaptor.capture());
+    verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
+    verify(enclave).getForwardingKeys();
+    verify(enclave).getPublicKeys();
+
+    final PrivacyMetadata metadata = metadataArgCaptor.getValue();
+
+    assertThat(metadata.getPrivacyMode()).isEqualTo(PrivacyMode.MANDATORY_RECIPIENTS);
+    assertThat(metadata.getMandatoryRecipients()).containsExactly(receiver);
   }
 
   @Test
@@ -125,9 +163,6 @@ public class TransactionManagerTest {
         .when(encryptedTransactionDAO)
         .save(any(EncryptedTransaction.class), any(Callable.class));
 
-    when(payloadEncoder.forRecipient(any(EncodedPayload.class), any(PublicKey.class)))
-        .thenReturn(encodedPayload);
-
     PublicKey sender = PublicKey.from("SENDER".getBytes());
     PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
 
@@ -148,7 +183,6 @@ public class TransactionManagerTest {
     verify(enclave)
         .encryptPayload(
             any(byte[].class), any(PublicKey.class), anyList(), any(PrivacyMetadata.class));
-    verify(payloadEncoder).encode(encodedPayload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(enclave).getForwardingKeys();
     verify(enclave).getPublicKeys();
@@ -182,7 +216,6 @@ public class TransactionManagerTest {
     assertThat(result.getManagedParties()).isEmpty();
 
     verify(enclave).encryptPayload(any(), any(), any(), any());
-    verify(payloadEncoder).encode(encodedPayload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(enclave).getForwardingKeys();
     verify(enclave).getPublicKeys();
@@ -192,16 +225,14 @@ public class TransactionManagerTest {
   public void sendSignedTransaction() {
 
     EncodedPayload payload = mock(EncodedPayload.class);
+    MessageHash hash = new MessageHash("HASH".getBytes());
 
-    EncryptedRawTransaction encryptedRawTransaction =
-        new EncryptedRawTransaction(
-            new MessageHash("HASH".getBytes()),
-            "ENCRYPTED_PAYLOAD".getBytes(),
-            "ENCRYPTED_KEY".getBytes(),
-            "NONCE".getBytes(),
-            "SENDER".getBytes());
+    EncryptedRawTransaction encryptedRawTransaction = mock(EncryptedRawTransaction.class);
+    when(encryptedRawTransaction.getHash()).thenReturn(hash);
 
-    when(encryptedRawTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedRawTransaction.toRawTransaction()).thenReturn(mock((RawTransaction.class)));
+
+    when(encryptedRawTransactionDAO.retrieveByHash(hash))
         .thenReturn(Optional.of(encryptedRawTransaction));
 
     when(payload.getCipherText()).thenReturn("ENCRYPTED_PAYLOAD".getBytes());
@@ -226,7 +257,6 @@ public class TransactionManagerTest {
     ArgumentCaptor<PrivacyMetadata> data = ArgumentCaptor.forClass(PrivacyMetadata.class);
 
     verify(enclave).encryptPayload(any(RawTransaction.class), any(), data.capture());
-    verify(payloadEncoder).encode(payload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave).getForwardingKeys();
@@ -238,19 +268,63 @@ public class TransactionManagerTest {
   }
 
   @Test
+  public void sendSignedTransactionWithMandatoryRecipients() {
+
+    EncodedPayload payload = mock(EncodedPayload.class);
+    MessageHash hash = new MessageHash("HASH".getBytes());
+
+    EncryptedRawTransaction encryptedRawTransaction = mock(EncryptedRawTransaction.class);
+    when(encryptedRawTransaction.getHash()).thenReturn(hash);
+    when(encryptedRawTransaction.toRawTransaction()).thenReturn(mock((RawTransaction.class)));
+
+    when(encryptedRawTransactionDAO.retrieveByHash(eq(hash)))
+        .thenReturn(Optional.of(encryptedRawTransaction));
+
+    when(payload.getCipherText()).thenReturn("ENCRYPTED_PAYLOAD".getBytes());
+
+    when(enclave.encryptPayload(any(RawTransaction.class), any(), any())).thenReturn(payload);
+
+    PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
+
+    when(enclave.getPublicKeys()).thenReturn(Set.of(receiver));
+
+    SendSignedRequest sendSignedRequest = mock(SendSignedRequest.class);
+    when(sendSignedRequest.getRecipients()).thenReturn(List.of(receiver));
+    when(sendSignedRequest.getSignedData()).thenReturn("HASH".getBytes());
+    when(sendSignedRequest.getPrivacyMode()).thenReturn(PrivacyMode.MANDATORY_RECIPIENTS);
+    when(sendSignedRequest.getMandatoryRecipients()).thenReturn(Set.of(receiver));
+
+    SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
+
+    assertThat(result).isNotNull();
+    assertThat(result.getTransactionHash()).isEqualTo(new MessageHash("HASH".getBytes()));
+    assertThat(result.getManagedParties()).containsExactly(receiver);
+
+    ArgumentCaptor<PrivacyMetadata> data = ArgumentCaptor.forClass(PrivacyMetadata.class);
+
+    verify(enclave).encryptPayload(any(RawTransaction.class), any(), data.capture());
+    verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
+    verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
+    verify(enclave).getForwardingKeys();
+    verify(enclave).getPublicKeys();
+
+    final PrivacyMetadata passingData = data.getValue();
+    assertThat(passingData.getPrivacyMode()).isEqualTo(PrivacyMode.MANDATORY_RECIPIENTS);
+    assertThat(passingData.getPrivacyGroupId()).isNotPresent();
+    assertThat(passingData.getMandatoryRecipients()).containsExactly(receiver);
+  }
+
+  @Test
   public void sendSignedTransactionWithCallbackCoverage() {
 
     EncodedPayload payload = mock(EncodedPayload.class);
+    MessageHash hash = new MessageHash("HASH".getBytes());
 
-    EncryptedRawTransaction encryptedRawTransaction =
-        new EncryptedRawTransaction(
-            new MessageHash("HASH".getBytes()),
-            "ENCRYPTED_PAYLOAD".getBytes(),
-            "ENCRYPTED_KEY".getBytes(),
-            "NONCE".getBytes(),
-            "SENDER".getBytes());
+    EncryptedRawTransaction encryptedRawTransaction = mock(EncryptedRawTransaction.class);
+    when(encryptedRawTransaction.getHash()).thenReturn(hash);
+    when(encryptedRawTransaction.toRawTransaction()).thenReturn(mock((RawTransaction.class)));
 
-    when(encryptedRawTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedRawTransactionDAO.retrieveByHash(eq(hash)))
         .thenReturn(Optional.of(encryptedRawTransaction));
 
     doAnswer(
@@ -261,9 +335,6 @@ public class TransactionManagerTest {
             })
         .when(encryptedTransactionDAO)
         .save(any(EncryptedTransaction.class), any(Callable.class));
-
-    when(payloadEncoder.forRecipient(any(EncodedPayload.class), any(PublicKey.class)))
-        .thenReturn(payload);
 
     when(payload.getCipherText()).thenReturn("ENCRYPTED_PAYLOAD".getBytes());
 
@@ -289,7 +360,6 @@ public class TransactionManagerTest {
     ArgumentCaptor<PrivacyMetadata> data = ArgumentCaptor.forClass(PrivacyMetadata.class);
 
     verify(enclave).encryptPayload(any(RawTransaction.class), any(), data.capture());
-    verify(payloadEncoder).encode(payload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave).getForwardingKeys();
@@ -309,16 +379,13 @@ public class TransactionManagerTest {
   @Test
   public void sendSignedTransactionWithDuplicateRecipients() {
     EncodedPayload payload = mock(EncodedPayload.class);
+    MessageHash hash = new MessageHash("HASH".getBytes());
 
-    EncryptedRawTransaction encryptedRawTransaction =
-        new EncryptedRawTransaction(
-            new MessageHash("HASH".getBytes()),
-            "ENCRYPTED_PAYLOAD".getBytes(),
-            "ENCRYPTED_KEY".getBytes(),
-            "NONCE".getBytes(),
-            "SENDER".getBytes());
+    EncryptedRawTransaction encryptedRawTransaction = mock(EncryptedRawTransaction.class);
+    when(encryptedRawTransaction.getHash()).thenReturn(hash);
+    when(encryptedRawTransaction.toRawTransaction()).thenReturn(mock((RawTransaction.class)));
 
-    when(encryptedRawTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedRawTransactionDAO.retrieveByHash(eq(hash)))
         .thenReturn(Optional.of(encryptedRawTransaction));
 
     when(payload.getCipherText()).thenReturn("ENCRYPTED_PAYLOAD".getBytes());
@@ -339,7 +406,6 @@ public class TransactionManagerTest {
     assertThat(result.getManagedParties()).isEmpty();
 
     verify(enclave).encryptPayload(any(RawTransaction.class), any(), any());
-    verify(payloadEncoder).encode(payload);
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
     verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave).getForwardingKeys();
@@ -388,7 +454,6 @@ public class TransactionManagerTest {
 
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(payloadEncoder).encode(payload);
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
@@ -415,8 +480,6 @@ public class TransactionManagerTest {
   @Test
   public void storePayloadWhenWeAreSenderWithPrivateStateConsensus() {
     final PublicKey senderKey = PublicKey.from("SENDER".getBytes());
-
-    final byte[] input = "SOMEDATA".getBytes();
 
     final EncodedPayload encodedPayload = mock(EncodedPayload.class);
     when(encodedPayload.getSenderKey()).thenReturn(senderKey);
@@ -453,7 +516,6 @@ public class TransactionManagerTest {
 
     verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(payloadEncoder).encode(payload);
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(), any());
   }
@@ -461,7 +523,6 @@ public class TransactionManagerTest {
   @Test
   public void storePayloadAsRecipientWithAffectedContractTxsButPsvFlagMismatched() {
 
-    final byte[] input = "SOMEDATA".getBytes();
     final byte[] affectedContractPayload = "SOMEOTHERDATA".getBytes();
     final PublicKey senderKey = PublicKey.from("sender".getBytes());
 
@@ -475,7 +536,7 @@ public class TransactionManagerTest {
             "bfMIqWJ/QGQhkK4USxMBxduzfgo/SIGoCros5bWYfPKUBinlAUCqLVOUAP9q+BgLlsWni1M6rnzfmaqSw2J5hQ=="),
         SecurityHash.from("securityHash".getBytes()));
 
-    when(affectedContractTx.getEncodedPayload()).thenReturn(input);
+    when(affectedContractTx.getPayload()).thenReturn(affectedContractEncodedPayload);
     when(affectedContractTx.getHash())
         .thenReturn(
             new MessageHash(
@@ -492,12 +553,10 @@ public class TransactionManagerTest {
 
     when(encryptedTransactionDAO.findByHashes(any())).thenReturn(List.of(affectedContractTx));
     when(affectedContractTx.getEncodedPayload()).thenReturn(affectedContractPayload);
-    when(payloadEncoder.decode(affectedContractPayload)).thenReturn(affectedContractEncodedPayload);
 
     transactionManager.storePayload(payload);
     // Ignore transaction - not save
     verify(encryptedTransactionDAO).findByHashes(any());
-    verify(payloadEncoder).decode(any(byte[].class));
   }
 
   @Test
@@ -528,12 +587,11 @@ public class TransactionManagerTest {
         .thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
     when(payload.getAffectedContractTransactions()).thenReturn(affectedContractTransactionHashes);
     when(payload.getSenderKey()).thenReturn(senderKey);
-    when(affectedContractEncodedPayload.getRecipientKeys()).thenReturn(Arrays.asList(senderKey));
+    when(affectedContractEncodedPayload.getRecipientKeys()).thenReturn(List.of(senderKey));
 
     when(encryptedTransactionDAO.findByHashes(List.of(new MessageHash(txHash.getBytes()))))
         .thenReturn(List.of(affectedContractTx));
     when(affectedContractTx.getEncodedPayload()).thenReturn(affectedContractPayload);
-    when(payloadEncoder.decode(affectedContractPayload)).thenReturn(affectedContractEncodedPayload);
 
     transactionManager.storePayload(payload);
     // Ignore transaction - not save
@@ -571,16 +629,14 @@ public class TransactionManagerTest {
         .thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
     when(payload.getAffectedContractTransactions()).thenReturn(affectedContractTransactionHashes);
     when(payload.getSenderKey()).thenReturn(senderKey);
-    when(affectedContractEncodedPayload.getRecipientKeys()).thenReturn(Arrays.asList(someOtherKey));
+    when(affectedContractEncodedPayload.getRecipientKeys()).thenReturn(List.of(someOtherKey));
 
     when(encryptedTransactionDAO.findByHashes(any())).thenReturn(List.of(affectedContractTx));
-    when(affectedContractTx.getEncodedPayload()).thenReturn(affectedContractPayload);
-    when(payloadEncoder.decode(affectedContractPayload)).thenReturn(affectedContractEncodedPayload);
+    when(affectedContractTx.getPayload()).thenReturn(affectedContractEncodedPayload);
 
     transactionManager.storePayload(payload);
     // Ignore transaction - not save
     verify(encryptedTransactionDAO).findByHashes(any());
-    verify(payloadEncoder).decode(affectedContractPayload);
   }
 
   @Test
@@ -620,14 +676,16 @@ public class TransactionManagerTest {
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.empty());
 
-    ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
+    ArgumentCaptor<EncryptedTransaction> txCaptor =
+        ArgumentCaptor.forClass(EncryptedTransaction.class);
     when(enclave.findInvalidSecurityHashes(any(), any()))
         .thenReturn(singleton(new TxHash("invalidHash".getBytes())));
 
     transactionManager.storePayload(payload);
 
-    verify(payloadEncoder).encode(payloadCaptor.capture());
-    EncodedPayload sanitisedPayload = payloadCaptor.getValue();
+    verify(encryptedTransactionDAO).save(txCaptor.capture());
+
+    EncodedPayload sanitisedPayload = txCaptor.getValue().getPayload();
 
     // Assert that the invalid ACOTH had been removed
     assertThat(
@@ -637,7 +695,6 @@ public class TransactionManagerTest {
         .isNull();
 
     verify(encryptedTransactionDAO).findByHashes(any());
-    verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(), any());
@@ -645,16 +702,16 @@ public class TransactionManagerTest {
 
   @Test
   public void storePayloadWithExistingRecipientAndMismatchedContents() {
-    EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create().withCipherText("ct1".getBytes()).build();
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+
+    EncryptedTransaction existingDatabaseEntry = mock(EncryptedTransaction.class);
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingDatabaseEntry.getPayload()).thenReturn(existingPayload);
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create().withCipherText("ct2".getBytes()).build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct2".getBytes());
 
     final Throwable throwable =
         catchThrowable(() -> transactionManager.storePayload(payloadToStore));
@@ -664,33 +721,31 @@ public class TransactionManagerTest {
         .hasMessage("Invalid existing transaction");
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
 
   @Test
   public void storePayloadWithExistingRecipientPSVRecipientNotFound() {
-    EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
-            .withExecHash("execHash".getBytes())
-            .build();
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+    EncryptedTransaction existingDatabaseEntry = mock(EncryptedTransaction.class);
+
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingPayload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
+    when(existingPayload.getExecHash()).thenReturn("execHash".getBytes());
+
+    when(existingDatabaseEntry.getPayload()).thenReturn(existingPayload);
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
-            .withExecHash("execHash".getBytes())
-            .withRecipientKey(PublicKey.from("recipient1".getBytes()))
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct1".getBytes());
+    when(payloadToStore.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
+    when(payloadToStore.getExecHash()).thenReturn("execHash".getBytes());
+    when(payloadToStore.getRecipientKeys())
+        .thenReturn(List.of(PublicKey.from("recipient1".getBytes())));
+    when(payloadToStore.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
 
     final Throwable throwable =
         catchThrowable(() -> transactionManager.storePayload(payloadToStore));
@@ -700,7 +755,6 @@ public class TransactionManagerTest {
         .hasMessage("expected recipient not found");
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
@@ -710,12 +764,11 @@ public class TransactionManagerTest {
     privacyHelper = mock(PrivacyHelper.class);
     transactionManager =
         new TransactionManagerImpl(
-            payloadEncoder,
-            encryptedTransactionDAO,
-            batchPayloadPublisher,
             enclave,
+            encryptedTransactionDAO,
             encryptedRawTransactionDAO,
             resendManager,
+            batchPayloadPublisher,
             privacyHelper,
             mockDigest);
 
@@ -724,45 +777,45 @@ public class TransactionManagerTest {
     PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
     PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
 
-    EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
-            .withAffectedContractTransactions(Map.of(TxHash.from(new byte[0]), new byte[0]))
-            .withExecHash("execHash".getBytes())
-            .withRecipientKeys(List.of(recipient1, recipient2))
-            .build();
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+    TxHash txHash = TxHash.from("txHash".getBytes());
+    SecurityHash securityHash = SecurityHash.from("securityHash".getBytes());
+
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingPayload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
+    when(existingPayload.getAffectedContractTransactions())
+        .thenReturn(Map.of(txHash, securityHash));
+    when(existingPayload.getExecHash()).thenReturn("execHash".getBytes());
+    when(existingPayload.getRecipientKeys()).thenReturn(List.of(recipient1, recipient2));
+
+    EncryptedTransaction existingDatabaseEntry = new EncryptedTransaction(null, existingPayload);
+
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
-            .withAffectedContractTransactions(Map.of(TxHash.from(new byte[0]), new byte[0]))
-            .withExecHash("execHash".getBytes())
-            .withRecipientKeys(List.of(recipient1, recipient2))
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct1".getBytes());
+    when(payloadToStore.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
+    when(payloadToStore.getAffectedContractTransactions()).thenReturn(Map.of(txHash, securityHash));
+    when(payloadToStore.getExecHash()).thenReturn("execHash".getBytes());
+    when(payloadToStore.getRecipientKeys()).thenReturn(List.of(recipient1, recipient2));
+    when(payloadToStore.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
 
     MessageHash response = transactionManager.storePayload(payloadToStore);
 
     assertThat(response.toString()).isEqualTo("Y3Qx");
 
-    ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
-    verify(payloadEncoder).encode(payloadCaptor.capture());
+    ArgumentCaptor<EncryptedTransaction> txCaptor =
+        ArgumentCaptor.forClass(EncryptedTransaction.class);
+    verify(encryptedTransactionDAO).update(txCaptor.capture());
 
-    EncodedPayload updatedTransaction = payloadCaptor.getValue();
+    EncodedPayload updatedTransaction = txCaptor.getValue().getPayload();
     assertThat(updatedTransaction.getRecipientKeys()).containsExactly(recipient1, recipient2);
     assertThat(updatedTransaction.getRecipientBoxes())
         .containsExactly(RecipientBox.from("recipient_box1".getBytes()));
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(encryptedTransactionDAO).update(existingDatabaseEntry);
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
@@ -772,35 +825,35 @@ public class TransactionManagerTest {
     PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
     PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
 
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingPayload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(existingPayload.getRecipientKeys()).thenReturn(List.of(recipient1));
+    when(existingPayload.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
+
     EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientKeys(List.of(recipient1))
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+        new EncryptedTransaction(mock(MessageHash.class), existingPayload);
+
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientKeys(List.of(recipient2))
-            .withRecipientBox("recipient_box2".getBytes())
-            .build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct1".getBytes());
+    when(payloadToStore.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(payloadToStore.getRecipientKeys()).thenReturn(List.of(recipient2));
+    when(payloadToStore.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box2".getBytes())));
 
     MessageHash response = transactionManager.storePayload(payloadToStore);
 
     assertThat(response.toString()).isEqualTo("Y3Qx");
 
-    ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
-    verify(payloadEncoder).encode(payloadCaptor.capture());
+    ArgumentCaptor<EncryptedTransaction> txCaptor =
+        ArgumentCaptor.forClass(EncryptedTransaction.class);
+    verify(encryptedTransactionDAO).update(txCaptor.capture());
 
-    EncodedPayload updatedTransaction = payloadCaptor.getValue();
+    EncodedPayload updatedTransaction = txCaptor.getValue().getPayload();
     assertThat(updatedTransaction.getRecipientKeys()).containsExactly(recipient2, recipient1);
     assertThat(updatedTransaction.getRecipientBoxes())
         .containsExactly(
@@ -808,8 +861,6 @@ public class TransactionManagerTest {
             RecipientBox.from("recipient_box1".getBytes()));
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(encryptedTransactionDAO).update(existingDatabaseEntry);
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
@@ -818,68 +869,65 @@ public class TransactionManagerTest {
   public void storePayloadWithDuplicateExistingRecipient() {
     PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
 
-    EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+    EncryptedTransaction existingDatabaseEntry = mock(EncryptedTransaction.class);
 
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientKeys(List.of(recipient1))
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingPayload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(existingPayload.getRecipientKeys()).thenReturn(List.of(recipient1));
+    when(existingPayload.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
 
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+    when(existingDatabaseEntry.getPayload()).thenReturn(existingPayload);
+
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientKeys(List.of(recipient1))
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct1".getBytes());
+    when(payloadToStore.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(payloadToStore.getRecipientKeys()).thenReturn(List.of(recipient1));
+    when(payloadToStore.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
 
     MessageHash response = transactionManager.storePayload(payloadToStore);
 
     assertThat(response.toString()).isEqualTo("Y3Qx");
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
 
   @Test
   public void storePayloadWithExistingRecipientLegacyNoRecipients() {
-    EncryptedTransaction existingDatabaseEntry =
-        new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
-    EncodedPayload existingPayload =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientBox("recipient_box1".getBytes())
-            .build();
-    when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+
+    EncodedPayload existingPayload = mock(EncodedPayload.class);
+    when(existingPayload.getCipherText()).thenReturn("ct1".getBytes());
+    when(existingPayload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(existingPayload.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box1".getBytes())));
+
+    EncryptedTransaction existingDatabaseEntry = new EncryptedTransaction(null, existingPayload);
+
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.of(existingDatabaseEntry));
 
-    EncodedPayload payloadToStore =
-        EncodedPayload.Builder.create()
-            .withCipherText("ct1".getBytes())
-            .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
-            .withRecipientBox("recipient_box2".getBytes())
-            .build();
+    EncodedPayload payloadToStore = mock(EncodedPayload.class);
+    when(payloadToStore.getCipherText()).thenReturn("ct1".getBytes());
+    when(payloadToStore.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+    when(payloadToStore.getRecipientBoxes())
+        .thenReturn(List.of(RecipientBox.from("recipient_box2".getBytes())));
 
     MessageHash response = transactionManager.storePayload(payloadToStore);
 
     assertThat(response.toString()).isEqualTo("Y3Qx");
 
-    ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
-    verify(payloadEncoder).encode(payloadCaptor.capture());
+    ArgumentCaptor<EncryptedTransaction> txCaptor =
+        ArgumentCaptor.forClass(EncryptedTransaction.class);
+    verify(encryptedTransactionDAO).update(txCaptor.capture());
 
-    EncodedPayload updatedTransaction = payloadCaptor.getValue();
+    EncodedPayload updatedTransaction = txCaptor.getValue().getPayload();
     assertThat(updatedTransaction.getRecipientKeys()).isEmpty();
     assertThat(updatedTransaction.getRecipientBoxes())
         .containsExactly(
@@ -887,8 +935,6 @@ public class TransactionManagerTest {
             RecipientBox.from("recipient_box1".getBytes()));
 
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-    verify(encryptedTransactionDAO).update(existingDatabaseEntry);
-    verify(payloadEncoder).decode(any());
     verify(enclave).getPublicKeys();
     verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
   }
@@ -896,24 +942,24 @@ public class TransactionManagerTest {
   @Test
   public void receive() {
     PublicKey sender = PublicKey.from("sender".getBytes());
-    byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
-    MessageHash messageHash = new MessageHash(randomData);
+    PublicKey recipient = PublicKey.from("recipient".getBytes());
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(mock(PublicKey.class))
-            .withTransactionHash(messageHash)
-            .build();
+    MessageHash messageHash = new MessageHash("hash".getBytes());
 
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
     EncodedPayload payload = mock(EncodedPayload.class);
     when(payload.getExecHash()).thenReturn("execHash".getBytes());
     when(payload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
     when(payload.getSenderKey()).thenReturn(sender);
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     byte[] expectedOutcome = "Encrypted payload".getBytes();
@@ -931,7 +977,6 @@ public class TransactionManagerTest {
     assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
     assertThat(receiveResponse.getPrivacyGroupId()).isNotPresent();
 
-    verify(payloadEncoder).decode(any(byte[].class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
     verify(enclave).getPublicKeys();
@@ -940,16 +985,11 @@ public class TransactionManagerTest {
   @Test
   public void receiveWithPrivacyGroupId() {
     PublicKey sender = PublicKey.from("sender".getBytes());
-    byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
-    MessageHash messageHash = new MessageHash(randomData);
+    MessageHash messageHash = mock(MessageHash.class);
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(mock(PublicKey.class))
-            .withTransactionHash(messageHash)
-            .build();
-
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
     EncodedPayload payload = mock(EncodedPayload.class);
     when(payload.getExecHash()).thenReturn("execHash".getBytes());
@@ -957,14 +997,17 @@ public class TransactionManagerTest {
     when(payload.getSenderKey()).thenReturn(sender);
     when(payload.getPrivacyGroupId())
         .thenReturn(Optional.of(PrivacyGroup.Id.fromBytes("group".getBytes())));
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     byte[] expectedOutcome = "Encrypted payload".getBytes();
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenReturn(expectedOutcome);
 
     PublicKey publicKey = mock(PublicKey.class);
@@ -979,7 +1022,54 @@ public class TransactionManagerTest {
     assertThat(receiveResponse.getPrivacyGroupId().get())
         .isEqualTo(PrivacyGroup.Id.fromBytes("group".getBytes()));
 
-    verify(payloadEncoder).decode(any(byte[].class));
+    verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+    verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
+    verify(enclave).getPublicKeys();
+  }
+
+  @Test
+  public void receiveWithMandatoryRecipients() {
+    PublicKey sender = PublicKey.from("sender".getBytes());
+    byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
+    MessageHash messageHash = mock(MessageHash.class);
+
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+
+    PublicKey mandReceiver1 = PublicKey.from("mandatory1".getBytes());
+    PublicKey mandReceiver2 = PublicKey.from("mandatory2".getBytes());
+    EncodedPayload payload = mock(EncodedPayload.class);
+    when(payload.getMandatoryRecipients()).thenReturn(Set.of(mandReceiver1, mandReceiver2));
+    when(payload.getPrivacyMode()).thenReturn(PrivacyMode.MANDATORY_RECIPIENTS);
+    when(payload.getSenderKey()).thenReturn(sender);
+    when(payload.getPrivacyGroupId())
+        .thenReturn(Optional.of(PrivacyGroup.Id.fromBytes("group".getBytes())));
+
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
+        .thenReturn(Optional.of(encryptedTransaction));
+
+    byte[] expectedOutcome = "Encrypted payload".getBytes();
+
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
+        .thenReturn(expectedOutcome);
+
+    PublicKey publicKey = mock(PublicKey.class);
+    when(enclave.getPublicKeys()).thenReturn(Set.of(publicKey));
+
+    ReceiveResponse receiveResponse = transactionManager.receive(receiveRequest);
+
+    assertThat(receiveResponse).isNotNull();
+    assertThat(receiveResponse.sender()).isEqualTo(sender);
+    assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
+    assertThat(receiveResponse.getPrivacyGroupId()).isPresent();
+    assertThat(receiveResponse.getPrivacyGroupId().get())
+        .isEqualTo(PrivacyGroup.Id.fromBytes("group".getBytes()));
+
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
     verify(enclave).getPublicKeys();
@@ -991,30 +1081,28 @@ public class TransactionManagerTest {
     final PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
     final PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
 
-    byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
-    MessageHash messageHash = new MessageHash(randomData);
+    MessageHash messageHash = mock(MessageHash.class);
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(mock(PublicKey.class))
-            .withTransactionHash(messageHash)
-            .build();
-
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
     EncodedPayload payload = mock(EncodedPayload.class);
     when(payload.getExecHash()).thenReturn("execHash".getBytes());
     when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
     when(payload.getRecipientKeys()).thenReturn(List.of(recipient1, recipient2));
     when(payload.getSenderKey()).thenReturn(sender);
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     byte[] expectedOutcome = "Encrypted payload".getBytes();
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenReturn(expectedOutcome);
     when(enclave.getPublicKeys()).thenReturn(Set.of(recipient1, recipient2));
 
@@ -1026,7 +1114,6 @@ public class TransactionManagerTest {
         .containsExactlyInAnyOrder(recipient1, recipient2);
     assertThat(receiveResponse.sender()).isEqualTo(sender);
 
-    verify(payloadEncoder).decode(any(byte[].class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
     verify(enclave, times(2)).getPublicKeys();
@@ -1037,29 +1124,27 @@ public class TransactionManagerTest {
     final PublicKey sender = PublicKey.from("sender".getBytes());
     final PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
 
-    byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
-    MessageHash messageHash = new MessageHash(randomData);
+    MessageHash messageHash = mock(MessageHash.class);
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(mock(PublicKey.class))
-            .withTransactionHash(messageHash)
-            .build();
-
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
     EncodedPayload payload = mock(EncodedPayload.class);
     when(payload.getSenderKey()).thenReturn(sender);
     when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
     when(payload.getRecipientBoxes()).thenReturn(List.of(RecipientBox.from("box1".getBytes())));
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     byte[] expectedOutcome = "Encrypted payload".getBytes();
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenReturn(expectedOutcome);
     when(enclave.getPublicKeys()).thenReturn(Set.of(recipient1));
 
@@ -1070,7 +1155,6 @@ public class TransactionManagerTest {
     assertThat(receiveResponse.getManagedParties()).containsExactly(recipient1);
     assertThat(receiveResponse.sender()).isEqualTo(sender);
 
-    verify(payloadEncoder).decode(any(byte[].class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave, times(3)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
     verify(enclave, times(2)).getPublicKeys();
@@ -1082,20 +1166,16 @@ public class TransactionManagerTest {
     PublicKey recipient = PublicKey.from("recipient".getBytes());
     MessageHash messageHash = new MessageHash(Base64.getDecoder().decode(keyData));
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(recipient)
-            .withRaw(true)
-            .withTransactionHash(messageHash)
-            .build();
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+    when(receiveRequest.isRaw()).thenReturn(true);
 
-    final EncryptedRawTransaction encryptedTransaction =
-        new EncryptedRawTransaction(
-            messageHash,
-            "payload".getBytes(),
-            "key".getBytes(),
-            "nonce".getBytes(),
-            "sender".getBytes());
+    EncryptedRawTransaction encryptedTransaction = mock(EncryptedRawTransaction.class);
+    when(encryptedTransaction.getEncryptedPayload()).thenReturn("payload".getBytes());
+    when(encryptedTransaction.getEncryptedKey()).thenReturn("key".getBytes());
+    when(encryptedTransaction.getNonce()).thenReturn("nonce".getBytes());
+    when(encryptedTransaction.getSender()).thenReturn("sender".getBytes());
 
     when(encryptedRawTransactionDAO.retrieveByHash(messageHash))
         .thenReturn(Optional.of(encryptedTransaction));
@@ -1111,15 +1191,12 @@ public class TransactionManagerTest {
 
   @Test
   public void receiveRawTransactionNotFound() {
-    byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-    PublicKey recipient = PublicKey.from("recipient".getBytes());
-    MessageHash messageHash = new MessageHash(Base64.getDecoder().decode(keyData));
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withTransactionHash(messageHash)
-            .withRecipient(recipient)
-            .withRaw(true)
-            .build();
+
+    MessageHash messageHash = mock(MessageHash.class);
+
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+    when(receiveRequest.isRaw()).thenReturn(true);
 
     when(encryptedRawTransactionDAO.retrieveByHash(messageHash)).thenReturn(Optional.empty());
 
@@ -1130,18 +1207,13 @@ public class TransactionManagerTest {
   @Test
   public void receiveWithAffectedContractTransactions() {
     PublicKey sender = PublicKey.from("sender".getBytes());
-    byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
+
     PublicKey recipient = PublicKey.from("recipient".getBytes());
-    MessageHash messageHash = new MessageHash(keyData);
+    MessageHash messageHash = mock(MessageHash.class);
 
-    ReceiveRequest receiveRequest =
-        ReceiveRequest.Builder.create()
-            .withRecipient(recipient)
-            .withTransactionHash(messageHash)
-            .build();
-
-    final EncryptedTransaction encryptedTransaction =
-        new EncryptedTransaction(messageHash, keyData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
+    when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
     final String b64AffectedTxHash =
         "bfMIqWJ/QGQhkK4USxMBxduzfgo/SIGoCros5bWYfPKUBinlAUCqLVOUAP9q+BgLlsWni1M6rnzfmaqSw2J5hQ==";
@@ -1154,14 +1226,16 @@ public class TransactionManagerTest {
     when(payload.getAffectedContractTransactions()).thenReturn(affectedTxs);
     when(payload.getSenderKey()).thenReturn(sender);
 
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+    final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     byte[] expectedOutcome = "Encrypted payload".getBytes();
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenReturn(expectedOutcome);
 
     PublicKey publicKey = mock(PublicKey.class);
@@ -1176,7 +1250,6 @@ public class TransactionManagerTest {
     assertThat(receiveResponse.getAffectedTransactions()).hasSize(1);
     assertThat(receiveResponse.sender()).isEqualTo(sender);
 
-    verify(payloadEncoder).decode(any(byte[].class));
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
     verify(enclave).getPublicKeys();
@@ -1196,8 +1269,6 @@ public class TransactionManagerTest {
 
     EncodedPayload payload = mock(EncodedPayload.class);
 
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-
     when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
         .thenReturn(Optional.empty());
 
@@ -1212,7 +1283,6 @@ public class TransactionManagerTest {
   @Test
   public void receiveNoRecipientKeyFound() {
 
-    final byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
     PublicKey recipient = PublicKey.from("recipient".getBytes());
 
     MessageHash messageHash = mock(MessageHash.class);
@@ -1222,19 +1292,19 @@ public class TransactionManagerTest {
     when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
     when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
 
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
-
     EncodedPayload payload = mock(EncodedPayload.class);
 
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
     PublicKey publicKey = mock(PublicKey.class);
     when(enclave.getPublicKeys()).thenReturn(Collections.singleton(publicKey));
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenThrow(EncryptorException.class);
 
     try {
@@ -1244,39 +1314,26 @@ public class TransactionManagerTest {
       verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
       verify(enclave).getPublicKeys();
       verify(enclave).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
-      verify(payloadEncoder).decode(any(byte[].class));
     }
   }
 
   @Test
-  public void receiveHH() {
-
-    byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-    PublicKey recipient = PublicKey.from("recipient".getBytes());
+  public void receiveUnableToDecodePayload() {
 
     MessageHash messageHash = mock(MessageHash.class);
-    when(messageHash.getHashBytes()).thenReturn("KEY".getBytes());
 
     ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
-    when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
+    when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
     when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
 
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, null);
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(messageHash);
+    when(encryptedTransaction.getEncodedPayload()).thenReturn("bogus".getBytes());
 
-    EncodedPayload payload = mock(EncodedPayload.class);
-
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload).thenReturn(null);
-
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedTransactionDAO.retrieveByHash(eq(messageHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
-    byte[] expectedOutcome = "Encrypted payload".getBytes();
-
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
-        .thenReturn(expectedOutcome);
-
-    PublicKey publicKey = mock(PublicKey.class);
-    when(enclave.getPublicKeys()).thenReturn(Collections.singleton(publicKey));
+    when(enclave.getPublicKeys()).thenReturn(Set.of(mock(PublicKey.class)));
 
     final Throwable throwable = catchThrowable(() -> transactionManager.receive(receiveRequest));
 
@@ -1286,29 +1343,26 @@ public class TransactionManagerTest {
   }
 
   @Test
-  public void receiveNullRecipientThrowsNoRecipientKeyFound() {
-
-    byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
+  public void receiveEmptyRecipientThrowsNoRecipientKeyFound() {
 
     MessageHash transactionHash = mock(MessageHash.class);
-    when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
+
     ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
     when(receiveRequest.getRecipient()).thenReturn(Optional.empty());
     when(receiveRequest.getTransactionHash()).thenReturn(transactionHash);
 
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(transactionHash, keyData);
-
     EncodedPayload payload = mock(EncodedPayload.class);
 
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(transactionHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedTransactionDAO.retrieveByHash(eq(transactionHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
-    PublicKey publicKey = mock(PublicKey.class);
-    when(enclave.getPublicKeys()).thenReturn(Collections.singleton(publicKey));
+    when(enclave.getPublicKeys()).thenReturn(Set.of(mock(PublicKey.class)));
 
-    when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
+    when(enclave.unencryptTransaction(eq(payload), any(PublicKey.class)))
         .thenThrow(EncryptorException.class);
 
     try {
@@ -1318,30 +1372,27 @@ public class TransactionManagerTest {
       verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
       verify(enclave).getPublicKeys();
       verify(enclave).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
-      verify(payloadEncoder).decode(any(byte[].class));
     }
   }
 
   @Test
-  public void receiveEmptyRecipientThrowsNoRecipientKeyFound() {
+  public void receiveNullRecipientThrowsNoRecipientKeyFound() {
 
-    byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
     MessageHash transactionHash = mock(MessageHash.class);
-    when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
-    when(receiveRequest.getTransactionHash()).thenReturn(transactionHash);
 
-    EncryptedTransaction encryptedTransaction = new EncryptedTransaction(transactionHash, keyData);
+    ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+    when(receiveRequest.getTransactionHash()).thenReturn(transactionHash);
 
     EncodedPayload payload = mock(EncodedPayload.class);
 
-    when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+    EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getHash()).thenReturn(transactionHash);
+    when(encryptedTransaction.getPayload()).thenReturn(payload);
 
-    when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+    when(encryptedTransactionDAO.retrieveByHash(eq(transactionHash)))
         .thenReturn(Optional.of(encryptedTransaction));
 
-    PublicKey publicKey = mock(PublicKey.class);
-    when(enclave.getPublicKeys()).thenReturn(Collections.singleton(publicKey));
+    when(enclave.getPublicKeys()).thenReturn(Set.of(mock(PublicKey.class)));
 
     when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class)))
         .thenThrow(EncryptorException.class);
@@ -1353,25 +1404,24 @@ public class TransactionManagerTest {
       verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
       verify(enclave).getPublicKeys();
       verify(enclave).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
-      verify(payloadEncoder).decode(any(byte[].class));
     }
   }
 
   @Test
   public void storeRaw() {
-    byte[] sender = "SENDER".getBytes();
-    RawTransaction rawTransaction =
-        new RawTransaction(
-            "CIPHERTEXT".getBytes(),
-            "SomeKey".getBytes(),
-            new Nonce("nonce".getBytes()),
-            PublicKey.from(sender));
+    PublicKey sender = PublicKey.from("SENDER".getBytes());
+
+    RawTransaction rawTransaction = mock(RawTransaction.class);
+    when(rawTransaction.getEncryptedPayload()).thenReturn("CIPHERTEXT".getBytes());
+    when(rawTransaction.getEncryptedKey()).thenReturn("SomeKey".getBytes());
+    when(rawTransaction.getNonce()).thenReturn(new Nonce("nonce".getBytes()));
+    when(rawTransaction.getFrom()).thenReturn(sender);
 
     when(enclave.encryptRawPayload(any(), any())).thenReturn(rawTransaction);
 
     byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
     StoreRawRequest sendRequest = mock(StoreRawRequest.class);
-    when(sendRequest.getSender()).thenReturn(PublicKey.from(sender));
+    when(sendRequest.getSender()).thenReturn(sender);
     when(sendRequest.getPayload()).thenReturn(payload);
 
     MessageHash expectedHash = new MessageHash(mockDigest.digest("CIPHERTEXT".getBytes()));
@@ -1381,7 +1431,7 @@ public class TransactionManagerTest {
     assertThat(result).isNotNull();
     assertThat(result.getHash().getHashBytes()).containsExactly(expectedHash.getHashBytes());
 
-    verify(enclave).encryptRawPayload(eq(payload), eq(PublicKey.from(sender)));
+    verify(enclave).encryptRawPayload(eq(payload), eq(sender));
     verify(encryptedRawTransactionDAO)
         .save(
             argThat(
@@ -1390,47 +1440,9 @@ public class TransactionManagerTest {
                   assertThat(et.getEncryptedPayload()).containsExactly("CIPHERTEXT".getBytes());
                   assertThat(et.getHash()).isEqualTo(expectedHash);
                   assertThat(et.getNonce()).containsExactly("nonce".getBytes());
-                  assertThat(et.getSender()).containsExactly(sender);
+                  assertThat(et.getSender()).containsExactly(sender.getKeyBytes());
                   return true;
                 }));
-  }
-
-  @Test(expected = NullPointerException.class)
-  public void storeRawWithEmptySender() {
-    byte[] sender = "SENDER".getBytes();
-    RawTransaction rawTransaction =
-        new RawTransaction(
-            "CIPHERTEXT".getBytes(),
-            "SomeKey".getBytes(),
-            new Nonce("nonce".getBytes()),
-            PublicKey.from(sender));
-    when(enclave.encryptRawPayload(any(), any())).thenReturn(rawTransaction);
-    when(enclave.defaultPublicKey()).thenReturn(PublicKey.from(sender));
-    byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
-    StoreRawRequest sendRequest = StoreRawRequest.Builder.create().withPayload(payload).build();
-
-    MessageHash expectedHash = new MessageHash(mockDigest.digest("CIPHERTEXT".getBytes()));
-
-    try {
-      transactionManager.store(sendRequest);
-      failBecauseExceptionWasNotThrown(NullPointerException.class);
-    } catch (NullPointerException ex) {
-      assertThat(ex).hasMessage("Sender is required");
-      verify(enclave).encryptRawPayload(eq(payload), eq(PublicKey.from(sender)));
-      verify(enclave).defaultPublicKey();
-
-      verify(encryptedRawTransactionDAO)
-          .save(
-              argThat(
-                  et -> {
-                    assertThat(et.getEncryptedKey()).containsExactly("SomeKey".getBytes());
-                    assertThat(et.getEncryptedPayload()).containsExactly("CIPHERTEXT".getBytes());
-                    assertThat(et.getHash()).isEqualTo(expectedHash);
-                    assertThat(et.getNonce()).containsExactly("nonce".getBytes());
-                    assertThat(et.getSender()).containsExactly(sender);
-                    return true;
-                  }));
-    }
   }
 
   @Test
@@ -1438,12 +1450,11 @@ public class TransactionManagerTest {
 
     TransactionManager tm =
         new TransactionManagerImpl(
-            payloadEncoder,
-            encryptedTransactionDAO,
-            batchPayloadPublisher,
             enclave,
+            encryptedTransactionDAO,
             encryptedRawTransactionDAO,
             resendManager,
+            batchPayloadPublisher,
             privacyHelper,
             mockDigest);
 
@@ -1470,21 +1481,17 @@ public class TransactionManagerTest {
   @Test
   public void isSenderReturnsFalseIfSenderNotFoundInPublicKeys() {
     final MessageHash transactionHash = mock(MessageHash.class);
-    when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
-
-    final byte[] input = "SOMEDATA".getBytes();
 
     final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
-    when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
 
     final EncodedPayload encodedPayload = mock(EncodedPayload.class);
     PublicKey sender = mock(PublicKey.class);
     when(encodedPayload.getSenderKey()).thenReturn(sender);
 
+    when(encryptedTransaction.getPayload()).thenReturn(encodedPayload);
+
     when(encryptedTransactionDAO.retrieveByHash(transactionHash))
         .thenReturn(Optional.of(encryptedTransaction));
-
-    when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
 
     when(enclave.getPublicKeys()).thenReturn(emptySet());
 
@@ -1493,7 +1500,6 @@ public class TransactionManagerTest {
     assertThat(isSender).isFalse();
 
     verify(enclave).getPublicKeys();
-    verify(payloadEncoder).decode(input);
     verify(encryptedTransactionDAO).retrieveByHash(transactionHash);
   }
 
@@ -1505,16 +1511,14 @@ public class TransactionManagerTest {
 
     final byte[] input = "SOMEDATA".getBytes();
     final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
-    when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
 
     final PublicKey senderKey = mock(PublicKey.class);
 
     final EncodedPayload encodedPayload = mock(EncodedPayload.class);
     when(encodedPayload.getSenderKey()).thenReturn(senderKey);
+    when(encryptedTransaction.getPayload()).thenReturn(encodedPayload);
     when(encryptedTransactionDAO.retrieveByHash(transactionHash))
         .thenReturn(Optional.of(encryptedTransaction));
-
-    when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
 
     when(enclave.getPublicKeys()).thenReturn(Set.of(senderKey));
 
@@ -1523,7 +1527,7 @@ public class TransactionManagerTest {
     assertThat(isSender).isTrue();
 
     verify(enclave).getPublicKeys();
-    verify(payloadEncoder).decode(input);
+
     verify(encryptedTransactionDAO).retrieveByHash(transactionHash);
   }
 
@@ -1550,27 +1554,72 @@ public class TransactionManagerTest {
   public void getParticipantsReturnsAllRecipients() {
 
     MessageHash transactionHash = mock(MessageHash.class);
-    when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
 
     final PublicKey senderKey = mock(PublicKey.class);
     final PublicKey recipientKey = mock(PublicKey.class);
 
-    final byte[] input = "SOMEDATA".getBytes();
     final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
     final EncodedPayload encodedPayload = mock(EncodedPayload.class);
     when(encodedPayload.getRecipientKeys()).thenReturn(List.of(senderKey, recipientKey));
-    when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
+    when(encryptedTransaction.getPayload()).thenReturn(encodedPayload);
 
     when(encryptedTransactionDAO.retrieveByHash(transactionHash))
         .thenReturn(Optional.of(encryptedTransaction));
 
-    when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
-
     final List<PublicKey> participants = transactionManager.getParticipants(transactionHash);
 
     assertThat(participants).containsExactlyInAnyOrder(senderKey, recipientKey);
+    verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+  }
 
-    verify(payloadEncoder).decode(input);
+  @Test
+  public void getMandatoryRecipients() {
+
+    MessageHash transactionHash = mock(MessageHash.class);
+
+    final PublicKey senderKey = mock(PublicKey.class);
+    final PublicKey recipientKey = mock(PublicKey.class);
+
+    final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    final EncodedPayload encodedPayload = mock(EncodedPayload.class);
+    when(encodedPayload.getRecipientKeys()).thenReturn(List.of(senderKey, recipientKey));
+    when(encodedPayload.getPrivacyMode()).thenReturn(PrivacyMode.MANDATORY_RECIPIENTS);
+    when(encodedPayload.getMandatoryRecipients()).thenReturn(Set.of(recipientKey));
+
+    when(encryptedTransaction.getPayload()).thenReturn(encodedPayload);
+
+    when(encryptedTransactionDAO.retrieveByHash(transactionHash))
+        .thenReturn(Optional.of(encryptedTransaction));
+
+    final Set<PublicKey> participants = transactionManager.getMandatoryRecipients(transactionHash);
+
+    assertThat(participants).containsExactly(recipientKey);
+
+    verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+  }
+
+  @Test
+  public void getMandatoryRecipientsNotAvailable() {
+
+    MessageHash transactionHash = mock(MessageHash.class);
+
+    final PublicKey senderKey = mock(PublicKey.class);
+    final PublicKey recipientKey = mock(PublicKey.class);
+
+    final EncodedPayload encodedPayload = mock(EncodedPayload.class);
+    when(encodedPayload.getRecipientKeys()).thenReturn(List.of(senderKey, recipientKey));
+    when(encodedPayload.getPrivacyMode()).thenReturn(PrivacyMode.PARTY_PROTECTION);
+
+    final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+    when(encryptedTransaction.getPayload()).thenReturn(encodedPayload);
+    when(encryptedTransactionDAO.retrieveByHash(transactionHash))
+        .thenReturn(Optional.of(encryptedTransaction));
+
+    assertThatExceptionOfType(MandatoryRecipientsNotAvailableException.class)
+        .isThrownBy(() -> transactionManager.getMandatoryRecipients(transactionHash))
+        .withMessageContaining(
+            "Operation invalid. Transaction found is not a mandatory recipients privacy type");
+
     verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
   }
 
